#ifndef __REC_SLOW_COMMANDS_UNUSED__
#define __REC_SLOW_COMMANDS_UNUSED__

// Created by the command line:
// new --include=command/Command --proto=command::Commands src/rec/slow/commands/Unused.def

#include "rec/command/Command.h"
#include "rec/util/Defaulter.h"

namespace rec {
namespace slow {
namespace commands {

extern Def<command::Commands> unused;

}  // namespace commands
}  // namespace slow
}  // namespace rec

#endif  // __REC_SLOW_COMMANDS_UNUSED__
